# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1467 2010-10-17 20:16:01 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta6 2010-??-??
 - 2010-10-17 Fixed bug#6090 - Accounted Time is not displayed in articles if
    Ticket::ZoomTimeDisplay is set to 'yes'.
 - 2010-10-17 Fixed bug#6112 - Database IDs displayed in Admin GUI.
 - 2010-10-17 Fixed bug#6110 - AdminCustomerUserGroup lists non-existing group 'info'.
 - 2010-10-17 Fixed bug#6109 - '0' is not recognized as a valid input for TimeUnits.
 - 2010-10-12 Fixed bug#6058 - Keyboard shortcuts should be shown via tooltip.
 - 2010-10-12 Added ability to open ticket history and other ticket actions
    in parallel.
 - 2010-10-12 Fixed bug#6047 - Secure::DisableBanner does not work.
 - 2010-10-11 Fixed bug#6079 - Unread tickets does mark as readed only second time.
 - 2010-10-11 Fixed bug#5921 - RedHat rc script does not ignore ".save" files
    when rebuilding the cron jobs.
 - 2010-10-11 Fixed bug#6040 - Remove ReplyAll option if possible.
 - 2010-10-07 Fixed bug#5994 - Creating new statistic, field validation kicks in immediately.
 - 2010-10-07 Fixed bug#5975 - Notifications (event-based) to external email
    address are visible to customers.

3.0.0 beta5 2010-10-11
 - 2010-10-04 Fixed bug#6064 - Predefined responses does not work.
 - 2010-10-01 Big improvements to TicketZoom rendering performance.
 - 2010-09-30 Fixed bug#6054 - The default services are not loaded when creating a new ticket.
 - 2010-09-30 Fixed bug#5911 - Enhance menu behavior.
    The submenus in the agent main menu open on click by default. With the new
    config "OpenMainMenuOnHover" setting it can be specified that they should
    also open on mouse hover.