@@ -2,7 +2,7 @@
 # Kernel/System/VirtualFS.pm - all virtual fs functions
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: VirtualFS.pm,v 1.8 2010-10-07 07:21:40 mb Exp $
+# $Id: VirtualFS.pm,v 1.9 2010-10-18 00:05:50 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -15,7 +15,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.8 $) [1];
+$VERSION = qw($Revision: 1.9 $) [1];
 
 =head1 NAME
 
@@ -403,7 +403,7 @@ sub Find {
         if ($SQLWhere) {
             $SQLWhere .= ' AND ';
         }
-        $SQLWhere = 'vfs.id = vfsp.virtual_fs_id ' . $SQLWhere;
+        $SQLWhere .= 'vfs.id = vfsp.virtual_fs_id ';
         my $SQL = '';
         for my $Key ( sort keys %{ $Param{Preferences} } ) {
             if ($SQL) {
@@ -520,6 +520,6 @@ did not receive this file, see L<http://www.gnu.org/licenses/agpl.txt>.
 
 =head1 VERSION
 
-$Revision: 1.8 $ $Date: 2010-10-07 07:21:40 $
+$Revision: 1.9 $ $Date: 2010-10-18 00:05:50 $
 
 =cut
